--- a/#src/scss/innovation.scss
+++ b/#src/scss/innovation.scss
@@ -1,16 +1,19 @@
 .innovation {
-    background: left bottom / contain no-repeat #233142 url("../img/innovation-man-bg.png");
+    background: left bottom / contain no-repeat $secondary-color url("../img/innovation-man-bg.png");
     padding: 150px 0;
     position: relative;
 
     @media (max-width: 1180px) {
         padding: 80px 0;
     }
+    @media (max-width: 768px) {
+        padding: 60px 0;
+    }
     @media (max-width: 576px) {
         padding: 50px 0;
     }
     @media (max-width: 450px) {
-        background: center / cover no-repeat #233142 url("../img/innovation-man-bg.png");
+        background: center / cover no-repeat $secondary-color url("../img/innovation-man-bg.png");
     }
 
     // .innovation__wrapper
