--- a/#src/scss/reasons.scss
+++ b/#src/scss/reasons.scss
@@ -7,6 +7,9 @@
     @media (max-width: 1140px) {
         padding: 90px 0 55px;
     }
+    @media (max-width: 1140px) {
+        padding: 70px 0 40px;
+    }
     @media (max-width: 576px) {
         padding: 50px 0 25px;
     }
