--- a/#src/scss/testimonials.scss
+++ b/#src/scss/testimonials.scss
@@ -5,6 +5,9 @@
     @media (max-width: 1140px) {
         padding: 70px 15px;
     }
+    @media (max-width: 768px) {
+        padding: 50px 15px;
+    }
     @media (max-width: 576px) {
         padding: 30px 15px;
     }
