--- a/#src/scss/workers.scss
+++ b/#src/scss/workers.scss
@@ -5,8 +5,11 @@
     @media (max-width: 1140px) {
         padding: 60px 0 100px;
     }
+    @media (max-width: 768px) {
+        padding: 60px 0 60px;
+    }
     @media (max-width: 576px) {
-        padding: 50px 0 50px;
+        padding: 40px 0 40px;
     }
     // .workers__wrapper
     &__wrapper {
