--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -26,6 +26,7 @@ $transition: 0.2s;
 @import "testimonials";
 @import "innovation";
 @import "news";
+@import "footer";
 
 *,
 *::before,
@@ -139,12 +140,21 @@ h3 {
     font-size: 55px;
   }
 }
+
+.small-title {
+  font-size: 12px;
+}
+
 .color-text {
   color: $primary-color;
 }
 
 .unbold-text {
   font-weight: 400;
+}
+
+address {
+  font-style: normal;
 }
 
 .social-icons {
