--- a/WebTech/css/style.css
+++ b/WebTech/css/style.css
@@ -2286,6 +2286,194 @@ button.swiper-pagination-bullet {
   letter-spacing: 4px;
 }
 
+.modal-screen {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(12, 17, 23, 0.98);
+  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+  overflow: auto;
+}
+
+.modal-screen.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-wrapper {
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  background-color: #ececec;
+  max-width: 500px;
+  margin: 15px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.modal-wrapper.active {
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.modal-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: 600;
+  background-color: #377dff;
+  padding: 10px 15px;
+}
+
+.modal-header .btn-close {
+  border: 0;
+  outline: none;
+  background-color: transparent;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 32px;
+}
+
+.modal-description {
+  display: inline-block;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.modal-form {
+  padding: 15px;
+}
+
+.modal-input,
+.modal-textarea {
+  font-size: 18px;
+  line-height: 100%;
+  font-weight: 400;
+  width: 100%;
+  height: 50px;
+  background-color: #ffffff;
+  outline: none;
+  border: 2px solid transparent;
+  padding: 0 15px 0;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.modal-input::-webkit-input-placeholder, .modal-textarea::-webkit-input-placeholder {
+  color: rgba(51, 51, 51, 0.5);
+}
+
+.modal-input::-moz-placeholder, .modal-textarea::-moz-placeholder {
+  color: rgba(51, 51, 51, 0.5);
+}
+
+.modal-input:-ms-input-placeholder, .modal-textarea:-ms-input-placeholder {
+  color: rgba(51, 51, 51, 0.5);
+}
+
+.modal-input::-ms-input-placeholder, .modal-textarea::-ms-input-placeholder {
+  color: rgba(51, 51, 51, 0.5);
+}
+
+.modal-input::placeholder,
+.modal-textarea::placeholder {
+  color: rgba(51, 51, 51, 0.5);
+}
+
+.modal-input:focus,
+.modal-textarea:focus {
+  border-color: #377dff;
+}
+
+.modal-textarea {
+  height: 150px;
+  resize: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.input-label,
+.textarea-label {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 100%;
+  font-weight: 400;
+  margin: 15px 0 10px;
+}
+
+.modal-btn-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 0 -5px;
+}
+
+.modal-btn {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 10px 5px 0px;
+}
+
+.modal-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 5px 15px 15px;
+}
+
+.modal-requiry {
+  display: block;
+  margin-top: 10px;
+}
+
 *,
 *::before,
 *::after {
@@ -2421,6 +2609,7 @@ address {
   transition: 0.2s;
   position: relative;
   z-index: 0;
+  cursor: pointer;
 }
 
 .button::after {
@@ -2557,6 +2746,11 @@ address {
   .footer__contact-us-item-link:hover,
   .footer__contact-us-item-link:focus {
     color: #377dff;
+  }
+
+  .modal-input:hover,
+  .modal-textarea:hover {
+    border-color: #377dff;
   }
 
   .button:hover,
@@ -3268,6 +3462,10 @@ address {
     width: unset;
   }
 
+  .modal-textarea {
+    height: 100px;
+  }
+
   h2 {
     padding-left: 15px;
   }
@@ -3296,6 +3494,14 @@ address {
 @media (max-width: 349px) {
   .gallery__link img {
     width: 300px;
+  }
+}
+
+@media (max-height: 800px) {
+  .modal-screen {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
